<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">My Words</string>
    <string name="A_know">认识</string>
    <string name="A_vague">模糊</string>
    <string name="A_forget">忘记</string>
    <string name="app_register">注册</string>
    <string name="app_login">登陆</string>
    <string name="app_right">确定</string>
    <string name="app_main_tips">点击屏幕显示答案</string>
    <string name="app_main_say">请把英文和中文释义说出口</string>
    <string name="app_main_mean">释义</string>
    <string name="app_main_exam">例句</string>
    <string name="app_main_likely">相似词</string>
    <string name="app_main_dic">词典</string>
    <string name="app_setting_title_1">学习设置</string>
    <string name="app_setting_title_2">单词上限</string>
    <string name="app_setting_title_3">学习情况</string>
    <string name="app_setting_title_4">其他</string>
    <string name="app_setting_btn1">每日学习量</string>
    <string name="app_setting_btn2">记忆模式</string>
    <string name="app_setting_btn3">每日复习提醒时间</string>
    <string name="app_setting_btn4">备份还原</string>
    <string name="app_setting_btn5">单词总量</string>
    <string name="app_setting_btn6">获取单词上限</string>
    <string name="app_setting_btn7">购买</string>
    <string name="app_setting_btn8">补签</string>
    <string name="app_setting_btn9">已规划的单词量</string>
    <string name="app_setting_btn10">平均每天新学单词</string>
    <string name="app_setting_btn11">夜间模式</string>
    <string name="app_setting_btn12">更多设置</string>
    <string name="app_setting_btn13">帮助与反馈</string>
    <string name="app_setting_backup">当日复习的单词量+当日新学单词量</string>
    <string name="app_copyright">天外山单词V1.0.0 (200702) RLC</string>
    <string name="app_right_email">2573296154@qq.com Copyright 2020</string>
    <string name="app_page2_title">选词Or查词</string>
    <string name="app_page3_title">已学习</string>
    <string name="app_page4_title">我的设置</string>
    <string name="app_setting_backup1">同步</string>
    <string name="app_setting_backup2">暂无同步</string>
    <string name="app_setting_remember">英中</string>
    <string name="app_page3_user">尚未登陆，请先登录</string>
    <string name="app_username">用户名：</string>
    <string name="app_pwd">密    码：</string>
    <string name="page2_hind">请输入要翻译的单词、句子</string>
</resources>
