<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Pages.Login">

    <ScrollView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_gravity="center"
                    android:src="@mipmap/user"
                    android:layout_width="180dp"
                    android:layout_height="180dp"/>

            <LinearLayout
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_username"/>

                <EditText
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_pwd"/>

                <EditText
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        />

            </LinearLayout>

            <Button
                    android:layout_gravity="center"
                    android:id="@+id/btnForRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_register"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>